[package]
name = "knox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive"]}
copypasta = "0.8.1"
copypasta-ext = "0.4.1"
dirs = { version = "4.0" }
