[package]
name = "knox"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive"]}
copypasta = "0.10.0"
copypasta-ext = "0.4.1"
dirs = { version = "6.0.0" }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
